[gd_scene load_steps=4 format=3 uid="uid://bqudr864ptf7r"]

[ext_resource type="Texture2D" uid="uid://cc8salyqmquir" path="res://addons/curved_lines_2d/Collapse.svg" id="1_vcm5l"]
[ext_resource type="Script" uid="uid://1a3nrkdo50tg" path="res://addons/curved_lines_2d/assign_collision_inspector_form.gd" id="1_wi77q"]

[sub_resource type="FontVariation" id="FontVariation_wi77q"]
variation_embolden = 0.8

[node name="AssignCollisionInspectorForm" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wi77q")

[node name="HSeparator2" type="HSeparator" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TitleButton" type="Button" parent="."]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_wi77q")
toggle_mode = true
button_pressed = true
text = "Collision Polygon"
icon = ExtResource("1_vcm5l")
alignment = 0

[node name="ButtonContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label2" type="Label" parent="ButtonContainer"]
clip_contents = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "This will create a new CollisionPolygon2D node and assign it to the collision_polygon property of this ScalableVectorScape2D."
mouse_filter = 0
text = "Add Collision"

[node name="CreateCollisionButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 2
tooltip_text = "This will create a new Polygon2D node and assign it to the polygon property of this ScalableVectorScape2D."
text = "Add Collision"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="ButtonContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label2" type="Label" parent="ButtonContainer2"]
clip_contents = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Click on this button to select the CollisionPolygon2D node that is assigned to this shape  in the Scene Tree.

Use this for advanced features which are already built-in into godot."
mouse_filter = 0
text = "Edit CollisionPolygon2D*"

[node name="GotoCollisionButton" type="Button" parent="ButtonContainer2"]
layout_mode = 2
size_flags_horizontal = 2
tooltip_text = "Click on this button to select the CollisionPolygon2D node that is assigned to this shape  in the Scene Tree.

Use this for advanced features which are already built-in into godot."
text = "Edit CollisionPolygon2D"

[connection signal="toggled" from="TitleButton" to="." method="_on_title_button_toggled"]
[connection signal="pressed" from="ButtonContainer/CreateCollisionButton" to="." method="_on_create_collision_button_pressed"]
[connection signal="pressed" from="ButtonContainer2/GotoCollisionButton" to="." method="_on_goto_collision_button_pressed"]
